--- a/public/index.html
+++ b/public/index.html
@@ -314,6 +314,7 @@
     <script type="module" src="/store/edit.js"></script>
     <script type="module" src="/store/colorTheme.js"></script>
     <script type="module" src="/store/tossStore.js"></script>
+    <script type="module" src="/store/effects.js"></script>
     <!-- 2) Then app.js, which sets up tabManager and etc -->
     <script type="module" src="/app.js" defer></script>
     <!--  Alpine Plugins  -->
