--- a/public/html/clients.html
+++ b/public/html/clients.html
@@ -1,24 +1,24 @@
 <div x-data="clientManager" class="relative w-full px-12 py-4 2xl:px-20">
-  <!-- If no client is selected, show the selection modal -->
+  <!-- If no client is selected shows the selection modal -->
+  <div
+    class="inset-0 p-2 bg-white shadow-md mb-12 align-baseline dark:bg-vdp border border-vls/60 dark:border-vls/40 rounded flex justify-between">
+    <button
+      @click="$store.clients.showAddClientModal = true; 
+      if($store.clients.showAddClientModal) $nextTick(() => $refs.addNewClientName.focus())"
+      @keydown.escape.window="showAddClientModal = false"
+      class="modal-btn-prim shadow">
+      <svg class="size-4">
+        <use href="/icons/icons.svg#user-plus" />
+      </svg>
+      <span class="flex self-center">Add Client</span>
+    </button>
+    <h3
+      class="self-center font-medium text-base text-vls2 dark:text-vds underline decoration-vla dark:decoration-vda"
+      x-text="`${$store.clients.selectedClient.name || 'No selected client'}`"></h3>
+  </div>
   <div
     class="relative text-xs shadow-md bg-vlp dark:bg-vdp2 dark:shadow text-vlp dark:text-vds border rounded border-vls/40 p-2">
     <div class="relative px-2 py-0 overflow-y-auto table-scrollbar" style="max-height: 80vh">
-      <div
-        class="inset-0 p-2 bg-white shadow-md mb-8 align-baseline dark:bg-vdp border border-vls/60 dark:border-vls/40 rounded flex justify-between">
-        <button
-          @click="$store.clients.showAddClientModal = true; 
-          if($store.clients.showAddClientModal) $nextTick(() => $refs.addNewClientName.focus())"
-          @keydown.escape.window="showAddClientModal = false"
-          class="modal-btn-prim shadow">
-          <svg class="size-4">
-            <use href="/icons/icons.svg#user-plus" />
-          </svg>
-          <span class="flex self-center">Add Client</span>
-        </button>
-        <h3
-          class="self-center text-vls2 dark:text-vds underline decoration-vla dark:decoration-vda"
-          x-text="`${$store.clients.selectedClient.name || 'No selected client'}`"></h3>
-      </div>
       <!-- Clients Table -->
       <table class="w-full border-separate text-vls" style="border-spacing: 0 10px">
         <thead class="table-head-style">
